# jpeg

./: .project  CMakeLists.txt  jconfig.cmake  jconfig.vc  jinclude.h  jmorecfg.h
